2007-05-18  Gert Driesen  <drieseng@users.sourceforge.net>

	* HttpWebRequestTest.cs: Added test for exception thrown on read
	timeout. Added tests for bug #81624 and #81671.

2007-04-23  Marek Habersack  <mhabersack@novell.com>

	* CookieContainerTest.cs: the GetCookies test works now.

2007-04-21  Gert Driesen  <drieseng@users.sourceforge.net>

	* CookieContainerTest.cs: Removed usage of deprecated Asssertion
	class. Added test for bug #81421.
	* SocketResponder.cs: Thread-safety fixes.

2007-03-07  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* HttpListenerPrefixCollectionTest.cs, HttpListenerTest.cs: removed not
	supported calls for TARGET_JVM because of validation failures

2007-02-24  Gert Driesen  <drieseng@users.sourceforge.net>

	* HttpWebRequestTest.cs: Added test for bug #80944.

2007-02-08  Ilya Kharmatsky <ilyak -at- mainsoft.com>

	* FileWebRequestTest.cs: Excluded not working under TARGET_JVM
	configuration code in GetResponse_File_DoesNotExist test.
	* HttpWebRequestTest.cs: Excluded not working under TARGET_JVM
	configuration test 'Sync'

2007-02-02  Gert Driesen  <drieseng@users.sourceforge.net>

	* SocketResponder.cs: Fixed typo. Moved to correct namespace.

2007-02-02  Gert Driesen  <drieseng@users.sourceforge.net>

	* FileWebRequestTest.cs: Separate tests that fail on Windows due to
	bug #80700, and ignore them on Windows.

2007-02-01  Gert Driesen  <drieseng@users.sourceforge.net>

	* WebProxyTest.cs: Added tests that cover regression introduced by
	previous change.

2007-01-31  Ilya Kharmatsky  <ilyak -at- mainsoft.com>

	* IPAddressTest.cs, WebProxyTest.cs, WebHeaderCollectionTest.cs,
	  ServicePointManagerTest.cs, ServicePointTest.cs:
	  Excluded not working in Grasshopper tests, under 'TARGET_JVM'
	  directive
	* HttpListenerPrefixCollectionTest.cs, HttpListenerTest.cs,
	  HttpListenerBasicIdentityTest.cs, HttpListener2Test.cs:
	  Excluded entire test fixture, since HttpListener still not 
	  implemented in Grasshopper.